--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
     <div class="row" >
               <div class="col-md-11 col-sm-11" style="border:3px solid #5CACEE;">
               <h2 class="wow fadeInUp" data-wow-delay="0.1s"><strong>News:</strong></h2>
+              <h4  class="wow fadeInUp" data-wow-delay="0.1s">2018-6: One IEEE TMM accepted!</h4>
               <h4 class="wow fadeInUp" data-wow-delay="0.1s">2017-10: I start working on a project  aiming at 3D face cameras. Please see &quot;Projects&quot; item for more info.</h4>
                 <h4 class="wow fadeInUp" data-wow-delay="0.1s">2017-9-9: One Neurocomputing paper accepted!</h4>
                      <h4 class="wow fadeInUp" data-wow-delay="0.1s">2017-8-14: NSFC fund on video saliency detecion granted!                     </h4>
@@ -150,6 +151,9 @@
   				<div class="wow fadeInUp section-title" data-wow-delay="0.2s">
     <h2><strong>Publication</strong></h2>
     <h3><strong>Journal papers </strong></h3>
+     <h3><font color="blue"><strong>[2018]</strong></font></h3>
+    <p><strong>- Keren  Fu</strong>, Qijun Zhao, Irene Yu-Hua Gu, Refinet: A Deep Segmentation Assisted Refinement Network for Salient Object Detection, IEEE Transactions on Multimedia, Accepted, 2018. (IF=3.51)</p>
+    
     <h3><font color="blue"><strong>[2017]</strong></font></h3>
     <p><strong>- Keren  Fu</strong>, Irene Yu-Hua Gu, Jie Yang, Spectral Salient Object Detection,  Neurocomputing, 275: 788-803, 2018. (IF=3.32)<a href="sources/NEUCOM_2017(final).pdf" download>[<font color="blue">pdf</font>]</a><a href="sources/Neuro_demo.zip" download>[<font color="blue">code</font>]</a></p>
     <p>- <a href="http://www.lfhsgre.org"><u>Fanghui Liu</u></a>, Tao Zhou, <a href="http://www.escience.cn/people/chengong/index.html"><u>Chen Gong</u></a>, <strong>Keren Fu</strong>, Li Bai, Jie Yang, &ldquo;Inverse  Nonnegative Local Coordinate Factorization for Visual Tracking,&rdquo; IEEE  Transactions on Circuits and Systems for Video Technology, Accepted, 2017. (IF=3.59)<a href="sources/INLCF.pdf" download>[<font color="blue">pdf</font>]</a>  </p>
