--- a/index.html
+++ b/index.html
@@ -250,6 +250,7 @@
         <div class="wow fadeInUp section-title" data-wow-delay="0.2s">
               <h2 class="wow fadeInUp" data-wow-delay="0.1s"><strong>Academic services</strong></h2>
               <h3 class="wow fadeInUp" data-wow-delay="0.1s"><strong>Reviewer for:</strong></h3>
+              <h4 class="wow fadeInUp" data-wow-delay="0.1s">IEEE Transaction on Image Processing </h4>
               <h4 class="wow fadeInUp" data-wow-delay="0.1s">IEEE Transaction on Neural Networks and Learning Systems </h4>
               <h4  class="wow fadeInUp" data-wow-delay="0.1s">Pattern Recognition</h4>
               <h4  class="wow fadeInUp" data-wow-delay="0.1s">Pattern Recognition Letters</h4>
