--- a/index.html
+++ b/index.html
@@ -255,6 +255,7 @@
               <h3 class="wow fadeInUp" data-wow-delay="0.1s"><strong>Reviewer for:</strong></h3>
               <h4 class="wow fadeInUp" data-wow-delay="0.1s">IEEE Transactions on Image Processing </h4>
               <h4 class="wow fadeInUp" data-wow-delay="0.1s">IEEE Transactions on Neural Networks and Learning Systems </h4>
+              <h4 class="wow fadeInUp" data-wow-delay="0.1s">IEEE Transactions on Multimedia </h4>
               <h4  class="wow fadeInUp" data-wow-delay="0.1s">Pattern Recognition</h4>
               <h4  class="wow fadeInUp" data-wow-delay="0.1s">Pattern Recognition Letters</h4>
               <h4  class="wow fadeInUp" data-wow-delay="0.1s">IEEE Access</h4>
