--- a/index.html
+++ b/index.html
@@ -219,14 +219,20 @@
 <section id="projects">
   <div class="container"> 
        <div class="row">
-              <div class="col-md-11 col-sm-11"   >
-              <div class="wow fadeInUp section-title" data-wow-delay="0.2s">
+         <div class="col-md-11 col-sm-11"   >
+           <div class="wow fadeInUp section-title" data-wow-delay="0.2s">
               <h2 class="wow fadeInUp" data-wow-delay="0.1s"><strong>Projects</strong></h2>
-               <h3 class="wow fadeInUp" data-wow-delay="0.1s"><strong>Current projects:</strong></h3>
-                     <h4 class="wow fadeInUp" data-wow-delay="0.1s">-I am working on a project aiming at products of portable 3D face cameras that could reconstruct 3D face in practical scenes, with applications to 3D face rendering and recognition, etc.</h4>
+               <h3 class="wow fadeInUp" data-wow-delay="0.1s"><strong>Current projects</strong></h3>
+                     <h4 class="wow fadeInUp" data-wow-delay="0.1s"><strong>3D face reconstruction</strong>: A project aiming at products of portable 3D face cameras that could reconstruct 3D face in practical scenes, with applications to 3D face rendering and recognition, etc.</h4>
                      <img src="images/3d-face.png" alt="3dface" width="500" height="403" class="wow fadeInUp img-responsive center-block" data-wow-delay="0.1s">       
-                    </div>               
-             </div>
+                      
+                         <h4 class="wow fadeInUp" data-wow-delay="0.1s"><strong>Face recognition</strong>: Face recognition in the wild is a challenging problem due to varying poses and illumination conditions. Specially, we are interesting in matching a 2D face image to 3D face model to pursue a better performance than conventional 2D-2D face recognition.</h4>
+                <img src="images/Snap3.png" alt="3dface" width="500" height="403" class="wow fadeInUp img-responsive center-block" data-wow-delay="0.1s"> 
+                    
+             <h4 class="wow fadeInUp" data-wow-delay="0.1s"><strong>Salient object detection</strong>: Salient object detection (SOD) is to find and highlight visually conspicuou objects from a scene.The outcomes of saliency detection are so-called saliency maps, where the pixel-wise intensity indicates the degree of how much this scene location attracts human attention.</h4>
+             <img src="images/Snap4.png" alt="3dface" width="500" height="403" class="wow fadeInUp img-responsive center-block" data-wow-delay="0.1s">
+              </div>       
+          </div>
        </div>
   </div>
 </section>
@@ -242,7 +248,7 @@
 <!-- SERVICES SECTION -->
 <section id="services">
   <div class="container"> 
-    <div class="row">
+    <div class="row"><span class="wow fadeInUp section-title"></span>
       <div class="col-md-11 col-sm-11"   >
         <div class="wow fadeInUp section-title" data-wow-delay="0.2s">
           <h2 class="wow fadeInUp" data-wow-delay="0.1s"><strong>Teaching</strong></h2>
