--- a/index.html
+++ b/index.html
@@ -253,6 +253,8 @@
         <div class="wow fadeInUp section-title" data-wow-delay="0.2s">
           <h2 class="wow fadeInUp" data-wow-delay="0.1s"><strong>Teaching</strong></h2>
           <h4 class="wow fadeInUp" data-wow-delay="0.1s">- SSD2: Introduction to Computer Systems<!--<a href="sources/ssd2_textbook.zip" download>[<font color="blue">text-book</font>]</a><a href="sources/New Perspectives on Computer Concepts 2011.zip" download>[<font color="blue">extended-reading</font>]</a><a href="sources/Unit1_PPT.zip" download>[<font color="blue">Unit1</font>]</a><a href="sources/Unit2-1.zip" download>[<font color="blue">Unit2-1</font>]</a><a href="sources/Unit2-2.zip" download>[<font color="blue">Unit2-2</font>]</a><a href="sources/Unit2-3.zip" download>[<font color="blue">Unit2-3</font>]</a><a href="sources/Unit3-1.zip" download>[<font color="blue">Unit3-1</font>]</a><a href="sources/Unit3-2.zip" download>[<font color="blue">Unit3-2</font>]</a><a href="sources/Unit3-3.zip" download>[<font color="blue">Unit3-3</font>]</a><a href="sources/Unit3-3-quiz-answers.zip" download>[<font color="blue">Unit3-3 quiz answers</font>]</a><a href="sources/mid-term-score.pdf" download>[<font color="blue">Mid-term scores</font>]</a>--></h4>
+          
+          <h4 class="wow fadeInUp" data-wow-delay="0.1s">- Advances in Computer Science<a href="" download>[<font color="blue">Downloads(coming soon)</font>]</a></h4>
         </div>
       </div>
       <div class="col-md-8 col-sm-8"   >
@@ -262,6 +264,7 @@
               <h4 class="wow fadeInUp" data-wow-delay="0.1s">IEEE Transactions on Image Processing </h4>
               <h4 class="wow fadeInUp" data-wow-delay="0.1s">IEEE Transactions on Neural Networks and Learning Systems </h4>
               <h4 class="wow fadeInUp" data-wow-delay="0.1s">IEEE Transactions on Multimedia </h4>
+              <h4 class="wow fadeInUp" data-wow-delay="0.1s">IEEE Transactions on Automation Science and Engineering </h4>
               <h4  class="wow fadeInUp" data-wow-delay="0.1s">Pattern Recognition</h4>
               <h4  class="wow fadeInUp" data-wow-delay="0.1s">Pattern Recognition Letters</h4>
               <h4  class="wow fadeInUp" data-wow-delay="0.1s">IEEE Access</h4>
