--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
     <div class="row" >
               <div class="col-md-11 col-sm-11" style="border:3px solid #5CACEE;">
               <h2 class="wow fadeInUp" data-wow-delay="0.1s"><strong>News:</strong></h2>
+              <h4  class="wow fadeInUp" data-wow-delay="0.1s">2019-9: One paper is accepted by Sensors Journal!</h4>
               <h4  class="wow fadeInUp" data-wow-delay="0.1s">2019-5: One Neurocomputing paper accepted!</h4>
               <h4  class="wow fadeInUp" data-wow-delay="0.1s">2019-5: One ICIP paper accepted!</h4>
               <h4  class="wow fadeInUp" data-wow-delay="0.1s">2019-2: One Image and Vision Computing paper accepted!</h4>
@@ -154,6 +155,8 @@
   				<div class="wow fadeInUp section-title" data-wow-delay="0.2s">
     <h2><strong>Publication</strong></h2>
     <h3><strong>Journal papers </strong></h3>
+     <p>- Zhenguo Hu, Penghui Gui, Ziqing Feng, Qijun Zhao, <strong>Keren Fu*</strong>, Feng <br>
+       Liu, Zhengxi Liu. Boosting Depth-based Face Recognition from a Quality Perspective, Sensors, Accepted. (IF=3.031)</p>
      <p>- <strong>Keren Fu</strong>, Qijun Zhao, Irene Yu-Hua Gu, Jie Yang, Deepside: A General Deep Framework for Salient Object Detection, Neurocomputing, 356: 69-82, 2019. (IF=3.32)</p>
      <p>- <strong>Keren Fu</strong>, Yijiang Xie, Hailong Jing, Jiangping Zhu, Fast Spatial-temporal Stereo Matching for 3D Face Reconstruction under Speckle Pattern Projection, Image and Vision Computing, 85: 36-45, 2019. (IF=2.16)</p>        
      <p>- Lei Zhou, <strong>Keren Fu</strong>, Zhi Liu, Fan Zhang, Zhimin Yin, Xiangyong Kong, Jianli Zheng, Superpixel based Continuous Conditional Random Field Neural Network for Semantic Segmentation, Neurocomputing, 340: 196-210, 2019. (IF=3.32)</p>
@@ -257,6 +260,8 @@
           <h4 class="wow fadeInUp" data-wow-delay="0.1s">- Advances in Computer Science<!--<a href="sources/AICS.zip" download>[<font color="blue">Downloads</font>]</a>--></h4>
           
           <h4 class="wow fadeInUp" data-wow-delay="0.1s">- Academic Standard & Writing Skills<a href="sources/ASWS-Lecture1.pdf" download>[<font color="blue">Lecture1</font>]</a></h4>
+          
+          <h4 class="wow fadeInUp" data-wow-delay="0.1s">- Biometrics<!--<a href="sources/AICS.zip" download>[<font color="blue">Downloads</font>]</a>--></h4>
         </div>
       </div>
       <div class="col-md-8 col-sm-8"   >
