--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
   				<div class="wow fadeInUp section-title" data-wow-delay="0.2s">
     <h2><strong>Publication</strong></h2>
     <h3><strong>Journal papers </strong></h3>
-    <p>- Ge-Peng Ji, Lei Zhu, Mingchen Zhuge, <strong>Keren Fu</strong>. Fast Camouflaged Object Detection via Edge-based Reversible Re-calibration Network, Pattern Recognition, 2021, Accepted.</p>
+    <p>- Ge-Peng Ji, Lei Zhu, Mingchen Zhuge, <strong>Keren Fu*</strong>. Fast Camouflaged Object Detection via Edge-based Reversible Re-calibration Network, Pattern Recognition, 2021, Accepted.</p>
     <p>- Ge-Peng Ji, Deng-Ping Fan, <strong>Keren Fu</strong>, Zhe Wu, Jianbing Shen, Ling Shao. Full-Duplex Strategy for Video Object Segmentation, Computational Visual Media, 2021, Accepted.</p>
     <p>- <strong>Keren Fu</strong>, Yao Jiang, Ge-Peng Ji, Tao Zhou, Qijun Zhao, Deng-Ping Fan. Light Field Salient Object Detection: A Review and Benchmark, Computational Visual Media, 2021, Accepted.<a href="https://arxiv.org/pdf/2010.04968.pdf">[<font color="red">pdf</font>]</a><a href="https://github.com/kerenfu/LFSOD-Survey/">[<font color="red">github</font>]</a></p>
     <p>- Yi Zhang, <strong>Keren Fu</strong>, Cong Han, et al. PGM-Face: Pose-Guided Margin Loss for Cross-Pose Face Recognition, Neurocomputing, 460: 154-165, 2021.</p>
