--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
     <div class="row" >
               <div class="col-md-11 col-sm-11" style="border:3px solid #5CACEE;">
               <h2 class="wow fadeInUp" data-wow-delay="0.1s"><strong>News:</strong></h2>
+               <h4  class="wow fadeInUp" data-wow-delay="0.1s">2022-3: One paper is accepted by Neurocomputing!</h4>
                <h4  class="wow fadeInUp" data-wow-delay="0.1s">2021-10: One paper is accepted by Pattern Recognition!<a href="https://github.com/GewelsJI/ERRNet">[<font color="red">Github</font>]</a></h4>
               <h4  class="wow fadeInUp" data-wow-delay="0.1s">2021-10: One paper is accepted by Computational Visual Media (CVMJ)!<a href="https://github.com/GewelsJI/FSNet">[<font color="red">Github</font>]</a></h4>
               <h4  class="wow fadeInUp" data-wow-delay="0.1s">2021-10: Congratulations to my master student Wenbo Zhang for acceptance of National Scholarship!</h4>
@@ -170,7 +171,8 @@
   				<div class="wow fadeInUp section-title" data-wow-delay="0.2s">
     <h2><strong>Publication</strong></h2>
     <h3><strong>Journal papers </strong></h3>
-    <p>- Ge-Peng Ji, Lei Zhu, Mingchen Zhuge, <strong>Keren Fu*</strong>. Fast Camouflaged Object Detection via Edge-based Reversible Re-calibration Network, Pattern Recognition, 2021, Accepted.</p>
+    <p>- Yao Jiang, Wenbo Zhang, <strong>Keren Fu*</strong>, Qijun Zhao. MEANet: Multi-Modal Edge-Aware Network for Light Field Salient Object Detection, Neurocomputing, 2022, Accepted.</p>
+    <p>- Ge-Peng Ji, Lei Zhu, Mingchen Zhuge, <strong>Keren Fu*</strong>. Fast Camouflaged Object Detection via Edge-based Reversible Re-calibration Network, Pattern Recognition,  123: 108414, 2022.</p>
     <p>- Ge-Peng Ji, Deng-Ping Fan, <strong>Keren Fu</strong>, Zhe Wu, Jianbing Shen, Ling Shao. Full-Duplex Strategy for Video Object Segmentation, Computational Visual Media, 2021, Accepted.</p>
     <p>- <strong>Keren Fu</strong>, Yao Jiang, Ge-Peng Ji, Tao Zhou, Qijun Zhao, Deng-Ping Fan. Light Field Salient Object Detection: A Review and Benchmark, Computational Visual Media, 2021, Accepted.<a href="https://arxiv.org/pdf/2010.04968.pdf">[<font color="red">pdf</font>]</a><a href="https://github.com/kerenfu/LFSOD-Survey/">[<font color="red">github</font>]</a></p>
     <p>- Yi Zhang, <strong>Keren Fu</strong>, Cong Han, et al. PGM-Face: Pose-Guided Margin Loss for Cross-Pose Face Recognition, Neurocomputing, 460: 154-165, 2021.</p>
