--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
     <div class="row" >
               <div class="col-md-11 col-sm-11" style="border:3px solid #5CACEE;">
               <h2 class="wow fadeInUp" data-wow-delay="0.1s"><strong>News:</strong></h2>
+               <h4  class="wow fadeInUp" data-wow-delay="0.1s">2022-8: One paper is accepted by IEEE TNNLS!</h4>
                <h4  class="wow fadeInUp" data-wow-delay="0.1s">2022-8: One paper is accepted by Computerized Medical Imaging and Graphics!</h4>
                <h4  class="wow fadeInUp" data-wow-delay="0.1s">2022-8: One paper is accepted by IEEE TMM!</h4>
                <h4  class="wow fadeInUp" data-wow-delay="0.1s">2022-7: One paper is accepted by IEEE Signal Processing Letters!</h4>
@@ -174,6 +175,8 @@
   				<div class="wow fadeInUp section-title" data-wow-delay="0.2s">
     <h2><strong>Publication</strong></h2>
     <h3><strong>Journal papers </strong></h3>
+    <p>- Qian Chen, Zhenxi Zhang, Yanye Lu, <strong>Keren Fu*</strong>, Qijun Zhao. 3D Convolutional Neural Networks for RGB-D
+Salient Object Detection and Beyond, IEEE Transactions on Neural Networks and Learning Systems, 2022, Accepted.</p>
     <p>- Huakun Yang, Qian Chen, <strong>Keren Fu</strong>, Lei Zhu, Lujia Jin, Qiushi Ren, Hongwei Du, Yanye Lu. Boosting Medical Image Segmentation via Conditional-Synergistic Convolution and Lesion Decoupling, Computerized Medical Imaging and Graphics, 2022, Accepted.</p>
     <p>- Geng Chen, Huazhu Fu, Tao Zhou, Guobao Xiao, <strong>Keren Fu</strong>, Yong Xia, Yanning Zhang. Fusion-Embedding Siamese Network for Light Field Salient Object Detection, IEEE Transactions on Multimedia, 2022, Accepted.</p>
     <p>- Dingyao Min, Chao Zhang, Yukang Lu, <strong>Keren Fu*</strong>, Qijun Zhao. Mutual-Guidance Transformer-Embedding Network For Video Salient Object Detection, IEEE Signal Processing Letters, 2022, Accepted.</p>
