--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                <div class="col-md-8 col-sm-6"   >
                     <h3 class="wow fadeInUp" data-wow-delay="0.1s">Welcome! </h3>
                     <h3 class="wow fadeInUp" data-wow-delay="0.1s">- My name is Keren Fu (傅可人) and I'm a research associate professor (副研究员) with the College of Computer Science (<a href="http://scubrl.org/"><font size="4" color="blue">Link to Biometrics Research Laboratory</font></a>), Sichuan Univerisity, Chengdu, China. </h3>
-                    <h4 class="wow fadeInUp" data-wow-delay="0.1s">(我招收2023级入学的硕士/博士生，欢迎报考304（学院）和604的同学联系我！)</h4>
+                    <h4 class="wow fadeInUp" data-wow-delay="0.1s">(我招收2023级入学的硕士生，欢迎报考<del>304（学院）</del>和604的同学联系我！)</h4>
                     <h3 class="wow fadeInUp" data-wow-delay="0.1s">- I received my dual Ph.D. degrees from both Shanghai Jiao Tong University and Chalmers University of Technology, Sweden, in 2016, and joined Sichuan University in 2017. </h3>
                     <h3 class="wow fadeInUp" data-wow-delay="0.1s">- My current interests mainly focus on visual computing, saliency analysis, stereo vision, and machine learning.</h3>
        
@@ -302,7 +302,10 @@ Salient Object Detection and Beyond, IEEE Transactions on Neural Networks and Le
           <h4 class="wow fadeInUp" data-wow-delay="0.1s">- Academic Standard & Writing Skills<a href="sources/ASWS-Lecture1.pdf" download>[<font color="blue">Lecture1</font>]</a><!--<a href="sources/ASWS-Lecture2.pdf" download>[<font color="blue">Lecture2</font>]</a>--></h4>
           
           <h4 class="wow fadeInUp" data-wow-delay="0.1s">- Biometrics<!--<a href="sources/AICS.zip" download>[<font color="blue">Downloads</font>]</a>--></h4>
-          <h4 class="wow fadeInUp" data-wow-delay="0.1s">- Introduction to Electronic Information<a href="sources/MLY-book.pdf" download><!--[<font color="blue">book</font>]</a><a href="sources/MLY-PPT-Part1.pdf" download>[<font color="blue">part1</font>]</a><a href="sources/MLY-PPT-Part2.pdf" download>[<font color="blue">part2</font>]</a>--></h4>
+          <h4 class="wow fadeInUp" data-wow-delay="0.1s">- Introduction to Electronic Information<!--
+          <a href="sources/MLY-book.pdf" download>[<font color="blue">book</font>]
+          <a href="sources/MLY-PPT-Part1.pdf" download>[<font color="blue">part1</font>]</a>
+          <a href="sources/MLY-PPT-Part2.pdf" download>[<font color="blue">part2</font>]</a></h4>
           <h4 class="wow fadeInUp" data-wow-delay="0.1s">- Image Processing Specialization<!--<a href="sources/图像处理专题—视觉显著性检测.pdf" download>[<font color="blue">pdf</font>]</a>--></h4>
         </div>
       </div>
