--- a/index.html
+++ b/index.html
@@ -309,8 +309,8 @@ Salient Object Detection and Beyond, IEEE Transactions on Neural Networks and Le
           <h4 class="wow fadeInUp" data-wow-delay="0.1s">- Introduction to Electronic Information
           <a href="sources/MLY-book.pdf" download>[<font color="blue">book</font>]
           <a href="sources/MLY-PPT-Part1.pdf" download>[<font color="blue">part1</font>]</a>
-          <!--<a href="sources/MLY-PPT-Part2.pdf" download>[<font color="blue">part2</font>]</a></h4>
-          <h4 class="wow fadeInUp" data-wow-delay="0.1s">- Image Processing Specialization<!--<a href="sources/图像处理专题—视觉显著性检测.pdf" download>[<font color="blue">pdf</font>]</a>--></h4>
+          <a href="sources/MLY-PPT-Part2.pdf" download>[<font color="blue">part2</font>]</a></h4>
+          <!--<h4 class="wow fadeInUp" data-wow-delay="0.1s">- Image Processing Specialization<!--<a href="sources/图像处理专题—视觉显著性检测.pdf" download>[<font color="blue">pdf</font>]</a>--></h4>
         </div>
       </div>
       <div class="col-md-8 col-sm-8"   >
