--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                <div class="col-md-8 col-sm-6"   >
                     <h3 class="wow fadeInUp" data-wow-delay="0.1s">Welcome! </h3>
                     <h3 class="wow fadeInUp" data-wow-delay="0.1s">- My name is Keren Fu (傅可人) and I'm a research associate professor (副研究员) with the College of Computer Science (<a href="http://scubrl.org/"><font size="4" color="blue">Link to Biometrics Research Laboratory</font></a>), Sichuan Univerisity, Chengdu, China. </h3>
-                    <h4 class="wow fadeInUp" data-wow-delay="0.1s">(我招收2023级入学的硕士生/<del>博士生</del>，欢迎报考<del>304（学院）</del>和604的同学联系我！)</h4>
+                    <!-- <h4 class="wow fadeInUp" data-wow-delay="0.1s">(我招收2023级入学的硕士生/<del>博士生</del>，欢迎报考<del>304（学院）</del>和604的同学联系我！)</h4>-->
                     <h3 class="wow fadeInUp" data-wow-delay="0.1s">- I received my dual Ph.D. degrees from both Shanghai Jiao Tong University and Chalmers University of Technology, Sweden, in 2016, and joined Sichuan University in 2017. </h3>
                     <h3 class="wow fadeInUp" data-wow-delay="0.1s">- My current interests mainly focus on visual computing, saliency analysis, stereo vision, and machine learning.</h3>
        
