--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                <h4  class="wow fadeInUp" data-wow-delay="0.1s">2022-8: One paper is accepted by Computerized Medical Imaging and Graphics!</h4>
                <h4  class="wow fadeInUp" data-wow-delay="0.1s">2022-8: One paper is accepted by IEEE TMM!</h4>
                <h4  class="wow fadeInUp" data-wow-delay="0.1s">2022-7: One paper is accepted by IEEE Signal Processing Letters!</h4>
-               <h4  class="wow fadeInUp" data-wow-delay="0.1s">2022-6: We release a Demo website for our previous RGB-D SOD paper published on ACMMM-2021!<a href="https://rgbdsod-krf.natapp4.cc/">[<font color="red">Online demo</font>]</a></h4>
+               <h4  class="wow fadeInUp" data-wow-delay="0.1s">2022-6: We release a Demo website for our previous RGB-D SOD paper published on ACMMM-2021! Try it yourself!!<a href="https://rgbdsod-krf.natapp4.cc/">[<font color="red">Online demo</font>]</a></h4>
                <h4  class="wow fadeInUp" data-wow-delay="0.1s">2022-3: One paper is accepted by Neurocomputing!</h4>
                <h4  class="wow fadeInUp" data-wow-delay="0.1s">2021-10: One paper is accepted by Pattern Recognition!<a href="https://github.com/GewelsJI/ERRNet">[<font color="red">Github</font>]</a></h4>
               <h4  class="wow fadeInUp" data-wow-delay="0.1s">2021-10: One paper is accepted by Computational Visual Media (CVMJ)!<a href="https://github.com/GewelsJI/FSNet">[<font color="red">Github</font>]</a></h4>
