--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
     <div class="row" >
               <div class="col-md-11 col-sm-11" style="border:3px solid #5CACEE;">
               <h2 class="wow fadeInUp" data-wow-delay="0.1s"><strong>News:</strong></h2>
+                <h4  class="wow fadeInUp" data-wow-delay="0.1s">2023-8: One paper on dynmaic facial expression recognition is accepted by PRCV-2023!</h4>
                 <h4  class="wow fadeInUp" data-wow-delay="0.1s">2023-6: Congratulations to three my master students, Yao Jiang, Yukang Lu, and Dingyao Min, for receiving Outstanding Master Thesis Awards from the College!</h4>
                <h4  class="wow fadeInUp" data-wow-delay="0.1s">2023-2: I am invited to serve as a reviewer for ICCV 2023!</h4>
                <h4  class="wow fadeInUp" data-wow-delay="0.1s">2022-12: I am invited to serve as a PC member for IJCAI 2023!</h4>
@@ -233,6 +234,7 @@ Salient Object Detection and Beyond, IEEE Transactions on Neural Networks and Le
      
      
     <h3><strong>Conference papers</strong></h3>
+    <p>- Chengcheng Lu, Yiben Jiang, <strong>Keren Fu*</strong>, Qijun Zhao, Hongyu Yang, &ldquo;Long Short-Term Perception Network for Dynamic Facial Expression Recognition,&rdquo; accepted to PRCV 2023.</p>
     <p>- Bo Yuan, Yao Jiang, <strong>Keren Fu*</strong>, Qijun Zhao, &ldquo;Guided Focal Stack Refinement Network for Light Field Salient Object Detection,&rdquo; accepted to ICME 2023.</p>
     <p>- Dingyao Min, Chao Zhang, Yukang Lu, <strong>Keren Fu*</strong>, Qijun Zhao, &ldquo;Local-Global Interaction and Progressive Aggregation for Video Salient Object Detection,&rdquo; accepted to ICONIP 2022. <a href="https://github.com/mindingyao/IANet">[<font color="red">github</font>]</a></p>
     <p>- Yukang Lu, Dingyao Min, <strong>Keren Fu*</strong>, Qijun Zhao, &ldquo;Depth-Cooperated Trimodal Network for Video Salient Object Detection,&rdquo; in IEEE International Conference on Image Processing (ICIP) 2022. <a href="https://arxiv.org/pdf/2202.06060.pdf">[<font color="red">pdf</font>]</a><a href="https://github.com/luyukang/DCTNet">[<font color="red">github</font>]</a></p>
