--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
     <div class="row" >
               <div class="col-md-11 col-sm-11" style="border:3px solid #5CACEE;">
               <h2 class="wow fadeInUp" data-wow-delay="0.1s"><strong>News:</strong></h2>
+                 <h4  class="wow fadeInUp" data-wow-delay="0.1s">2023-10: I am acknowledged as Outstanding Reviewer at ICCV 2023!</h4>
                 <h4  class="wow fadeInUp" data-wow-delay="0.1s">2023-8: One paper on dynmaic facial expression recognition is accepted by PRCV-2023!</h4>
                 <h4  class="wow fadeInUp" data-wow-delay="0.1s">2023-6: Congratulations to three my master students, Yao Jiang, Yukang Lu, and Dingyao Min, for receiving Outstanding Master Thesis Awards from the College!</h4>
                <h4  class="wow fadeInUp" data-wow-delay="0.1s">2023-2: I am invited to serve as a reviewer for ICCV 2023!</h4>
