--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                     <h3 class="wow fadeInUp" data-wow-delay="0.1s">- My name is Keren Fu (傅可人) and I'm a research associate professor (副研究员) and PhD supervisor (博士生导师) with the College of Computer Science (<a href="http://scubrl.org/"><font size="4" color="blue">Link to Biometrics Research Laboratory</font></a>), Sichuan Univerisity, Chengdu, China. </h3>
                      <h4 class="wow fadeInUp" data-wow-delay="0.1s">(News: 现招收2024级入学的硕士生/博士生，欢迎报考304（计算机学院）和604（图像所）的同学联系我！)</h4>
                     <h3 class="wow fadeInUp" data-wow-delay="0.1s">- I received my dual Ph.D. degrees from both Shanghai Jiao Tong University and Chalmers University of Technology, Sweden, in 2016, and joined Sichuan University in 2017. </h3>
-                    <h3 class="wow fadeInUp" data-wow-delay="0.1s">- My current interests mainly focus on visual computing, saliency analysis, stereo vision, and machine learning.</h3>
+                    <h3 class="wow fadeInUp" data-wow-delay="0.1s">- My current interests mainly focus on visual computing, saliency analysis <a href="https://rgbdsod-krf.natapp4.cc/">[<font color="red">online demo</font>]</a>, stereo vision, and machine learning.</h3>
        
                </div>
           </div>
@@ -89,7 +89,12 @@
     <div class="row" >
               <div class="col-md-11 col-sm-11" style="border:3px solid #5CACEE;">
               <h2 class="wow fadeInUp" data-wow-delay="0.1s"><strong>News:</strong></h2>
-                 <h4  class="wow fadeInUp" data-wow-delay="0.1s">2023-10: I am acknowledged as Outstanding Reviewer at ICCV 2023!<a href="https://iccv2023.thecvf.com/iccv2023.main.conference.program-38--MTE.php">[<font color="red">link</font>]</a></h4>
+
+
+                  <h4  class="wow fadeInUp" data-wow-delay="0.1s">2023-10: We have released a pioneer work for RGB-D Video Salient Object Detection!<a href="https://github.com/kerenfu/RDVS/">[<font color="red">Github</font>]</a></h4>
+                  
+                 <h4  class="wow fadeInUp" data-wow-delay="0.1s">2023-10: I am invited to serve as a reviewer for CVPR 2024!</h4>
+                  <h4  class="wow fadeInUp" data-wow-delay="0.1s">2023-10: I am acknowledged as anOutstanding Reviewer at ICCV 2023!<a href="https://iccv2023.thecvf.com/iccv2023.main.conference.program-38--MTE.php">[<font color="red">link</font>]</a></h4>
                 <h4  class="wow fadeInUp" data-wow-delay="0.1s">2023-8: One paper on dynmaic facial expression recognition is accepted by PRCV-2023!</h4>
                 <h4  class="wow fadeInUp" data-wow-delay="0.1s">2023-6: Congratulations to three my master students, Yao Jiang, Yukang Lu, and Dingyao Min, for receiving Outstanding Master Thesis Awards from the College!</h4>
                <h4  class="wow fadeInUp" data-wow-delay="0.1s">2023-2: I am invited to serve as a reviewer for ICCV 2023!</h4>
