--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                   <h4  class="wow fadeInUp" data-wow-delay="0.1s">2023-10: We have released a pioneer work for RGB-D Video Salient Object Detection!<a href="https://github.com/kerenfu/RDVS/">[<font color="red">Github</font>]</a></h4>
                   
                  <h4  class="wow fadeInUp" data-wow-delay="0.1s">2023-10: I am invited to serve as a reviewer for CVPR 2024!</h4>
-                  <h4  class="wow fadeInUp" data-wow-delay="0.1s">2023-10: I am acknowledged as anOutstanding Reviewer at ICCV 2023!<a href="https://iccv2023.thecvf.com/iccv2023.main.conference.program-38--MTE.php">[<font color="red">link</font>]</a></h4>
+                  <h4  class="wow fadeInUp" data-wow-delay="0.1s">2023-10: I am acknowledged as  Outstanding Reviewer at ICCV 2023!<a href="https://iccv2023.thecvf.com/iccv2023.main.conference.program-38--MTE.php">[<font color="red">link</font>]</a></h4>
                 <h4  class="wow fadeInUp" data-wow-delay="0.1s">2023-8: One paper on dynmaic facial expression recognition is accepted by PRCV-2023!</h4>
                 <h4  class="wow fadeInUp" data-wow-delay="0.1s">2023-6: Congratulations to three my master students, Yao Jiang, Yukang Lu, and Dingyao Min, for receiving Outstanding Master Thesis Awards from the College!</h4>
                <h4  class="wow fadeInUp" data-wow-delay="0.1s">2023-2: I am invited to serve as a reviewer for ICCV 2023!</h4>
