--- a/index.html
+++ b/index.html
@@ -330,9 +330,11 @@ Salient Object Detection and Beyond, IEEE Transactions on Neural Networks and Le
         <div class="wow fadeInUp section-title" data-wow-delay="0.2s">
               <h2 class="wow fadeInUp" data-wow-delay="0.1s"><strong>Academic services</strong></h2>
               <h3 class="wow fadeInUp" data-wow-delay="0.1s"><strong>Reviewer for:</strong></h3>
+              <h4 class="wow fadeInUp" data-wow-delay="0.1s">IEEE Transactions on Pattern Analysis and Machine Intelligence </h4>
               <h4 class="wow fadeInUp" data-wow-delay="0.1s">IEEE Transactions on Image Processing </h4>
               <h4 class="wow fadeInUp" data-wow-delay="0.1s">IEEE Transactions on Neural Networks and Learning Systems </h4>
-              <h4 class="wow fadeInUp" data-wow-delay="0.1s">IEEE Transactions on Multimedia </h4>
+              <h4 class="wow fadeInUp" data-wow-delay="0.1s">IEEE Transactions on Multimedia</h4>
+              <h4 class="wow fadeInUp" data-wow-delay="0.1s">IEEE Transactions on Circuits and Systems for Video Technology</h4>
               <h4 class="wow fadeInUp" data-wow-delay="0.1s">IEEE Transactions on Automation Science and Engineering </h4>
               <h4 class="wow fadeInUp" data-wow-delay="0.1s">IEEE Transactions on Industrial Informatics </h4>
               <h4 class="wow fadeInUp" data-wow-delay="0.1s">IEEE Transactions on Industrial Electronics </h4>
