--- a/index.html
+++ b/index.html
@@ -90,8 +90,10 @@
               <div class="col-md-11 col-sm-11" style="border:3px solid #5CACEE;">
               <h2 class="wow fadeInUp" data-wow-delay="0.1s"><strong>News:</strong></h2>
 
-			<h4  class="wow fadeInUp" data-wow-delay="0.1s">2023-12: We conduct a preliminary work to promote segmentation accuracy of SAM!<a href="https://arxiv.org/abs/2401.00248">[<font color="red">Arxiv</font>]</a></h4></h4>
-			<h4  class="wow fadeInUp" data-wow-delay="0.1s">2023-12: I am invited to serve as a PC member for IJCAI 2024!</h4>
+			<h4  class="wow fadeInUp" data-wow-delay="0.1s">2024-1: I am invited to serve as a reviewer for ECCV 2024!</h4>
+            <h4  class="wow fadeInUp" data-wow-delay="0.1s">2024-1: One paper is accepted by Image and Vision Computing!</h4>
+            <h4  class="wow fadeInUp" data-wow-delay="0.1s">2023-12: We conduct a preliminary work to promote segmentation accuracy of SAM!<a href="https://arxiv.org/abs/2401.00248">[<font color="red">Arxiv</font>]</a>			</h4>
+            <h4  class="wow fadeInUp" data-wow-delay="0.1s">2023-12: I am invited to serve as a PC member for IJCAI 2024!</h4>
                   <h4  class="wow fadeInUp" data-wow-delay="0.1s">2023-10: We have released a pioneer work for RGB-D Video Salient Object Detection!<a href="https://github.com/kerenfu/RDVS/">[<font color="red">Github</font>]</a></h4>              
                  <h4  class="wow fadeInUp" data-wow-delay="0.1s">2023-10: I am invited to serve as a reviewer for CVPR 2024!</h4>
                   <h4  class="wow fadeInUp" data-wow-delay="0.1s">2023-10: I am acknowledged as  Outstanding Reviewer at ICCV 2023!<a href="https://iccv2023.thecvf.com/iccv2023.main.conference.program-38--MTE.php">[<font color="red">link</font>]</a></h4>
